--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=ChaTop API
 
+#server.servlet.contextPath=/api
+
 spring.datasource.url=jdbc:mysql://localhost:3306/ocr
 spring.datasource.username=ocr
 spring.datasource.password=ocr
