upgrade max file size upload limit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 application.jwt.key=${JWT_KEY}
 application.pictures.path=${PICTURES_PATH}
 application.pictures.url=/api/pictures
+
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
